added full gif for release

--- a/docs/08.03 - Monitoring-Azure-DevOps - Orchestrating Deployments and Automating Release Notes.md
+++ b/docs/08.03 - Monitoring-Azure-DevOps - Orchestrating Deployments and Automating Release Notes.md
@@ -136,11 +136,15 @@ In this scenario we can be notified, other checks currently do not allow for fle
 
 ## Scenario: Orchestrating a Release
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/OrchestrateRelease.AllUp.PNG" style="zoom:50%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/Ochestrate Release with Teams.gif" style="zoom:50%;" />
 
 In the above example, we have a multi-stage release pipeline that encompasses multiple teams from development to support to testing. The pipeline relies on multiple artifacts and code branches for importing and testing. 
 
 In this example, we have a core solution containing Dynamics 365 entity changes that are needed by integrations. They will need to lead the deployment and test and notify the subsequent teams that everything has passed and can move on. Below is an example of coordination between the deployment team and the Core team lead.
+
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/Ochestrate Release with Teams.gif" style="zoom:50%;" />
+
+Below is an image showing the entire release deployment with stages completed.
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/OrchestrateRelease.AllUp.PNG" style="zoom:50%;" />
 
