adding release notes generator and build logs powershell samples

--- a/docs/08.03 - Monitoring-Azure-DevOps - Orchestrating Deployments and Automating Release Notes.md
+++ b/docs/08.03 - Monitoring-Azure-DevOps - Orchestrating Deployments and Automating Release Notes.md
@@ -136,7 +136,7 @@ In this scenario we can be notified, other checks currently do not allow for fle
 
 ## Scenario: Orchestrating a Release
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/Ochestrate Release with Teams.gif" style="zoom:50%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/Ochestrate Release with Teams - Full.gif" style="zoom:50%;" />
 
 In the above example, we have a multi-stage release pipeline that encompasses multiple teams from development to support to testing. The pipeline relies on multiple artifacts and code branches for importing and testing. 
 
@@ -153,4 +153,18 @@ Below is an image showing the entire release deployment with stages completed.
 ##### Azure Application Insights Release Annotations
 
 The Azure Application Insights Release Annotations task is a marketplace extension from Microsoft allowing a release pipeline to signal an event in a release pipeline. An event could be the start of the pipeline, the end, or any event we are interested in. From here we can use native functionality of Application Insights to stream metrics and logs.
+
+## Next Steps
+
+In this article we have worked with **Azure DevOps** externally. Using the SDK or REST API, **Azure DevOps** can be explored in detail, allowing us to reimagine how we consume and work with the service.
+
+Previously we looked at setting up notifications and web hooks to popular services. Continuing from here, we will look into more collaboration opportunities. We will review Chat Bots and integrations with **Microsoft Teams**. For deployment tracking, we will dive into build and release events and opportunities to analyze for greater insights into trends.
+
+If you are interested in learning more about [**specialized guidance and training** for monitoring or other areas of the Power Platform](https://community.dynamics.com/crm/b/crminthefield/posts/pfe-dynamics-365-service-offerings), which includes a [monitoring workshop](https://community.dynamics.com/cfs-file/__key/communityserver-blogs-components-weblogfiles/00-00-00-17-38/WorkshopPLUS-_2D00_-Dynamics-365-Customer-Engagement-Monitoring-with-Application-lnsights-1-Day-with-Lab_2D00_FA5D599F_2D00_20E4_2D00_4087_2D00_A713_2D00_39FBD14DF7E5.pdf), please contact your **Technical Account Manager** or **Microsoft representative** for further details. 
+
+Your feedback is **<u>extremely valuable</u>** so please leave a comment below and I'll be happy to help where I can! Also, if you find any inconsistencies, omissions or have suggestions, [please go here to submit a new issue](https://github.com/aliyoussefi/MonitoringPowerPlatform/issues).
+
+## Index
+
+[Monitoring the Power Platform: Introduction and Index](
 
