power automate example

--- a/docs/08.01 - Monitoring-Azure-DevOps Notifications and Service Hooks.md
+++ b/docs/08.01 - Monitoring-Azure-DevOps Notifications and Service Hooks.md
@@ -118,9 +118,7 @@ A real world example of using a web hook came up when I needed to come up with a
 
 In this scenario, the solution I settled on four services: Azure DevOps Web Hooks, Power Automate Flows, [Microsoft Adaptive Cards](https://adaptivecards.io/) and Microsoft Teams. Azure DevOps Web Hooks were used to fire an event to Power Automate which was listening for an HTTP request. Power Automate would then query the 3rd party work item tracking service for detailed on work items. From there Power Automate would create an Adaptive Card. The Adaptive Card was designed to provide direct links back to the 3rd part work item service and to the Azure DevOps Build, currently in progress. Finally, the Adaptive Card was sent to a Microsoft Teams Channel for distribution.
 
-<insert pp image>
-
-
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/WebHookToTeamsAdaptiveCard.gif" style="zoom:50%;" />
 
 For sample code and further documentation, please refer to this link.
 
@@ -128,7 +126,7 @@ For sample code and further documentation, please refer to this link.
 
 In this article we have the beginning stages of collecting and distributing feedback for our teams and stakeholders. Email notifications based on work item updates and code changes allow specific teams to quickly respond to changes. Service hooks allow for events to be sent to first and third party integrations. Web hooks allow for complete flexibility, delivering stateful messages to HTTP endpoint subscribers.
 
-Continuing from here, we will explore the Azure DevOps REST API and specific actions that can be useful for tracking changes. For collaboration, we will review Chat Bots and integrations with Microsoft Teams. For deployment tracking, we will dive into build and release events and opportunities to analyze for greater insights into trends.
+Continuing from here, [we will explore the Azure DevOps REST API and specific actions that can be useful for tracking changes](https://community.dynamics.com/crm/b/crminthefield/posts/monitoring-the-power-platform-azure-devops---using-the-rest-api-to-monitor-pipelines). [For collaboration, we will review Chat Bots and integrations with Microsoft Teams](https://community.dynamics.com/crm/b/crminthefield/posts/monitoring-the-power-platform-azure-devops---orchestrating-deployments-and-automating-release-notes). For deployment tracking, we will dive into build and release events and opportunities to analyze for greater insights into trends.
 
 If you are interested in learning more about [**specialized guidance and training** for monitoring or other areas of the Power Platform](https://community.dynamics.com/crm/b/crminthefield/posts/pfe-dynamics-365-service-offerings), which includes a [monitoring workshop](https://community.dynamics.com/cfs-file/__key/communityserver-blogs-components-weblogfiles/00-00-00-17-38/WorkshopPLUS-_2D00_-Dynamics-365-Customer-Engagement-Monitoring-with-Application-lnsights-1-Day-with-Lab_2D00_FA5D599F_2D00_20E4_2D00_4087_2D00_A713_2D00_39FBD14DF7E5.pdf), please contact your **Technical Account Manager** or **Microsoft representative** for further details. 
 
