--- a/docs/08.02 - Monitoring-Azure-DevOps - Using API to Monitor and Report.md
+++ b/docs/08.02 - Monitoring-Azure-DevOps - Using API to Monitor and Report.md
@@ -206,6 +206,10 @@ $buildTaskLogs.value | ForEach-Object{
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/BuildLogs.WaekHamze.PNG" style="zoom:50%;" />
 
+## Sample Code
+
+The **PowerShell** code referenced in this article can [be found here](https://github.com/aliyoussefi/MonitoringPowerPlatform/blob/master/Samples/DevOps/PowerShell/Get%20Environment%20Build%20and%20Download%20Logs%20Example.ps1).
+
 ## References
 
 Below is a list of the **Azure DevOps REST API** operations for **Builds** I find useful:
