--- a/docs/08.03 - Monitoring-Azure-DevOps - Orchestrating Deployments and Automating Release Notes.md
+++ b/docs/08.03 - Monitoring-Azure-DevOps - Orchestrating Deployments and Automating Release Notes.md
@@ -1,8 +1,10 @@
-# Monitoring the Power Platform: Deployments
+# Monitoring the Power Platform: Azure DevOps - Orchestrating Deployments and Automating Release Notes
 
 ## Summary
 
-DevOps has become more and more ingrained into our Power Platform planning and operations throughout the project lifecycle. From work item templates and feedback tools to continuous integration and delivery to automated testing to compliance and governance considerations. Microsoft's tool, Azure DevOps includes native capabilities to work with packaged changes and data that can be automated for delivery to production environments. Each step along the way can be tracked and monitored which will be the focus of this section.
+[DevOps](https://azure.microsoft.com/en-us/overview/what-is-devops/) has become more and more ingrained into our **Power Platform** project lifecycle. Work item tracking and feedback tools for teamwork. Continuous integration and delivery for code changes and solution deployments. Automated testing for assurance, compliance and governance considerations. Microsoft's tool, **[Azure DevOps](https://azure.microsoft.com/en-us/overview/what-is-devops/#culture)** provides native capabilities to plan, work, collaborate and deliver. Each step along the way in our [**Power Platform DevOps** journey](https://docs.microsoft.com/en-us/power-platform/alm/devops-build-tools) can be tracked and monitored which will be the primary objective of this article.
+
+
 
 ## Sources
 
@@ -10,25 +12,9 @@ Sources of Azure DevOps events that impact our delivery can come from virtually 
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/ADO.Areas.png" style="zoom:50%;" />
 
-## Service Hooks and Notifications
-
-### Service Hooks
-
-[Service Hooks](https://docs.microsoft.com/en-us/azure/devops/service-hooks/overview?view=azure-devops#what-is-a-service-hook) are a great way of staying informed of events happening within Azure DevOps allowing you to be freed up to focus on other things. Examples include pushing notifications to your teams' mobile devices, notifying team members on Microsoft Teams or even invoking Microsoft Power Automate flows.
-
-![](https://docs.microsoft.com/en-us/azure/devops/service-hooks/_img/service-hooks.png?view=azure-devops)
-
-#### Using Web Hooks
-
-Web Hooks allow for publishing messages and events to any type of service interested in the PowerApps DevOps process. Services can include other build and release platforms (i.e. Jenkins and Slack), Collaboration tools like Office 365, Customer Support interfaces like UserVoice and Integration services (Azure Service Bus, Azure Storage, Zapier, etc). Azure DevOps also provides the ability to integrate with a generic web hook that may not be available in the Visual Studio Marketplace. This is useful for custom connectors used in Microsoft Power Automate, Azure API Management, etc.
-
-https://docs.microsoft.com/en-us/azure/devops/service-hooks/overview?view=azure-devops
-
-
-
 ## Microsoft Teams, Continuous Collaboration and Integration
 
- has quickly grown into one of my favorite features. [Azure DevOps dashboards and kanban boards can be added to channels for visualizations of progress](https://docs.microsoft.com/en-us/azure/devops/boards/integrations/boards-teams?view=azure-devops). 
+Azure DevOps bots with Microsoft Teams has quickly grown into one of my favorite features. [Azure DevOps dashboards and kanban boards can be added to channels for visualizations of progress](https://docs.microsoft.com/en-us/azure/devops/boards/integrations/boards-teams?view=azure-devops). 
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DevOps/WorkItems-Dashboard-TeamsEmbedded.JPG" style="zoom:50%;" />
 
@@ -150,9 +136,17 @@ Below is an image showing the entire release deployment with stages completed.
 
 ## Automating Release Notes
 
-##### Azure Application Insights Release Annotations
+### Azure Application Insights Release Annotations
 
-The Azure Application Insights Release Annotations task is a marketplace extension from Microsoft allowing a release pipeline to signal an event in a release pipeline. An event could be the start of the pipeline, the end, or any event we are interested in. From here we can use native functionality of Application Insights to stream metrics and logs.
+The [Azure Application Insights Release Annotations task](https://docs.microsoft.com/en-us/azure/azure-monitor/app/annotations) is a marketplace extension from Microsoft allowing a release pipeline to signal an event in a release pipeline. An event could be the start of the pipeline, the end, or any event we are interested in. From here we can use native functionality of **Azure Application Insights** to stream metrics and logs.
+
+### Using an Azure Function with Web Hooks
+
+[Service Hooks](https://docs.microsoft.com/en-us/azure/devops/service-hooks/overview?view=azure-devops#what-is-a-service-hook) are a great way of staying informed of events happening within **Azure DevOps** allowing you to be freed up to focus on other things. Examples include pushing notifications to your teams' mobile devices, notifying team members on **Microsoft Teams** or even invoking Microsoft Power Automate flows.
+
+![](https://docs.microsoft.com/en-us/azure/devops/service-hooks/_img/service-hooks.png?view=azure-devops)
+
+The sample code for generating **Azure DevOps** release notes using an **Azure Function** can [be found here](https://github.com/aliyoussefi/MonitoringPowerPlatform/tree/master/Samples/DevOps/ReleaseNotesGenerator).
 
 ## Next Steps
 
